# ferricula-arena

./: .mcp.json  HARDCORE_README.md  PLAN.md  README.md  delos-broker.py  pyproject.toml
agents/: analyst.toml  magma.toml  reader.toml  researcher.toml  steve-jobs.toml
arena/: __init__.py  advocate.py  agent.py  autonomous.py  cli.py  clients.py  config.py  monitor.py  supervisor.py  tools.py  trainer.py  world.py
tests/: test_clients.py  test_config.py  test_trainer.py
