[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ferricula-arena"
version = "0.1.0"
description = "Agent runner SDK for ferricula-backed AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "anthropic>=0.40",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
tui = ["textual>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["arena"]

[project.scripts]
arena = "arena.cli:main"
